infra/kustomize/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-to-argocd-cert
  namespace: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway
  to:
    - group: ""
      kind: Secret
      name: argocd-server-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: argocd-https
  hostnames:
    - argocd.62a.quanianitis.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
